--- a/manifest.json
+++ b/manifest.json
@@ -9,12 +9,12 @@
     "theme_color": "#b0adad",
     "icons": [
       {
-        "src": "tdsp_logo4_ico.webp",
+        "src": "tdsp_logo_ico.webp",
         "sizes": "192x192",
         "type": "image/webp"
       },
       {
-        "src": "tdsp_logo4_ico.webp",
+        "src": "tdsp_logo_ico.webp",
         "sizes": "512x512",
         "type": "image/webp"
       }
