--- a/manifest.json
+++ b/manifest.json
@@ -11,12 +11,12 @@
       {
         "src": "favicon192x192.png",
         "sizes": "192x192",
-        "type": "image/webp"
+        "type": "image/png"
       },
       {
         "src": "favicon512x512.png",
         "sizes": "512x512",
-        "type": "image/webp"
+        "type": "image/png"
       }
     ]
   }
